--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -1,13 +1,12 @@
 <h1>Search!</h1>
 
-<form action="/users/search" method="GET">
-  <input
-    type="text"
-    name="query"
-    value="<%= @query %>">
+<div class="users-search">
+  <input type="text" name="username">
+  <ul class="users">
+  </ul>
+</div>
 
-  <input type="submit" value="Search Users!">
-</form>
+
 
 <ul>
   <% @users.each do |user| %>
