Tweet compose plugin

--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -16,3 +16,13 @@
     </li>
   <% end %>
 </ul>
+
+<script charset="utf-8">
+  $(function () {
+    $(".users-search").usersSearch();
+  });
+
+  $(function () {
+    $(".follow-toggle").followToggle();
+  });
+</script>
