--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,3 +22,9 @@
     <li><%= followee.username %></li>
   <% end %>
 </ul>
+
+<script charset="utf-8">
+  $(function () {
+    $(".follow-toggle").followToggle();
+  });
+</script>
