Infinite tweets plugin

--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -1,10 +1,16 @@
 <h1>Welcome <%= current_user.username %>!</h1>
 
 <b>Your Feed!</b>
-<ul id="feed">
-  <% @feed_tweets.each do |tweet| %>
-    <li><%= render "tweets/tweet", tweet: tweet %></li>
-  <% end %>
-</ul>
+<div class="infinite-tweets">
+  <ul id="feed">
+  </ul>
+  <a href="javascript:void(0)" class="fetch-more">Fetch more tweets</a>
+</div>
 
 <%= render "tweets/form" %>
+
+<script>
+  $(function() {
+    $(".infinite-tweets").infiniteTweets();
+  })
+</script>
